assets/css/main.css
/*
    - Template Name: Fox
    - Template URI: 
    - Author: Mohamed Kamel
    - Author URI: https://www.facebook.com/M.Kamel090
    - Description: Fox This is html5 template for App Landing Page
    - Version: 1.0
    - Tags: HTML, Mobile App, Template, Landing Page , Responsive, Bootstrap 4 
*/

/* ----------------------------------------------------
    CSS INDEX        

    01. START GENERAL STYLE (font, body, btn, section-title, section-padding, margins ... etc)
    02. START PRELOADER STYLE
    03. START HEADER STYLE
    04. START SLIDE STYLE
    05. START BOXES SECTION
    06. START WHY US SECTION
    07. START MAIN FEATURES SECTION
    08. START OTHER FEATURES SECTION
    09. START WATCH VIDEO SECTION
    10. START PRODUCTS SECTION
    11. START TESTIMONIAL SECTION
    12. START FUN FACTS SECTION
    13. START PRICE TABLE SECTION
    14. START TEAM SECTION
    15. START FAQ SECTION
    16. START LOGOS SECTION
    17. START RECENT NEWS SECTION
    18. START DOWNLOAD APP SECTION
    19. START GET IN TOUCH SECTION
    20. START MAP SECTION
    21. START FOOTER SECTION
    22. START BLOG PAGE
    23. START SIDEBAR
    24. START SINGLE BLOG PAGE
    25. START WHATSAPP BUTTON

/* ----------------------------------------------------*/

/*------------------------------
    01. START GENERAL STYLE
------------------------------*/

@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900&subset=latin-ext');

@font-face {
    font-family: Monad;
    src: url("../fonts/Monad.otf") format("opentype");
}

body {
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    position: relative;
    overflow-x: hidden;
}

.logo-text {
    font-family: Monad;
    font-size: 70px;
    color: #fff;
    text-transform: uppercase;
    letter-spacing: 0.1em;
}

p {
    font-weight: 400;
    line-height: 30px;
}

.lnr  {
    display: inline-block;
    fill: currentColor;
    width: 1em;
    height: 1em;
    vertical-align: -0.05em;
}

a:focus {
    outline: none;
    outline-offset: none;
}

a:hover {
    text-decoration: none;
}


.background-fullwidth {
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.background-fixed {
    background-attachment: fixed;
}

.form-control:focus {
    outline: none;
    box-shadow: none;
}

.height-100 {
    height: 100vh;
    min-height: 600px;
}

.btn-primary {
    border-radius: 50px;
    padding: 15px 45px;
    text-transform: uppercase;
    font-size: 14px;
    display: inline-block;
    border: 0;
}

.btn-colord {
    color: #fff;
}

.btn-colord:hover {
    color: #fff;
}

.btn-white {
    background: #fff;
}

.btn-theme {
    position: relative;
    overflow: hidden;
    outline: none !important;
    border: none;
    box-shadow: none !important;
}

.btn-theme:hover,
.prices .price-table:hover .btn-theme {
    color: #fff;
}

.btn-theme.btn-white:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 1;
    background: #fff;
}

.btn-theme.btn-colord:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 1;
}

.btn-theme:hover:before,
.prices .price-table:hover .btn-theme:before {
    opacity: 0 !important;
}

.btn-theme>span {
    position: relative;
}

.shadow {
    box-shadow: 0.5px 0.866px 10px 0px rgb(0, 0, 0);
}

a,
.btn-white,
.btn-theme:before,
.foxapp-header .dropdown-menu .dropdown-item,
.slide .content-bottom,
.slide .content-bottom h2,
.boxes .box:hover .lnr,
.other-features .other-features-slider .item,
.products .products-slider .item,
.clients-testimonial .testimonial-slider .slick-dots li,
.clients-testimonial .testimonial-slider .slick-dots li button,
.our-team .team-slider .person,
.our-team .team-slider .person h3,
.our-team .team-slider .person ul,
.our-team .team-slider .person ul li a,
.our-team .team-slider .slick-dots li,
.our-team .team-slider .slick-dots li button,
.faq .accordion .card .card-header h5 .btn,
.faq .accordion .card .card-header h5 .btn:before,
.faq .accordion .card .card-header h5 .btn:after,
.recent-news .recent-news-slider .slick-dots li,
.recent-news .recent-news-slider .slick-dots li button,
.download-app a,
footer .subscribe .subscribe-form-2 label,
footer .subscribe .subscribe-form-2 .form-group {
    transition: all ease 0.3s;
}

.space-15 {
    height: 15px;
}

.space-20 {
    height: 20px;
}

.space-25 {
    height: 25px;
}

.space-50 {
    height: 50px;
}

.space-100 {
    height: 100px;
}

.padding-50 {
    padding: 50px 0;
}

.padding-100 {
    padding: 100px 0;
}

.lity-close {
    text-shadow: none !important;
}

.lity-content:after {
    box-shadow: none !important;
}

.section-title h3 {
    font-size: 60px;
    font-weight: 900;
    margin: 0;
}

.section-title h3 span.white {
    color: #fff !important;

}

.section-title p {
    font-size: 18px;
    font-weight: 600;
    max-width: 750px;
    margin: 0 auto;
}

@media (max-width: 768px) {
    .section-title h3 {
        font-size: 40px;
    }
}

.nowrap {
    white-space: nowrap;
}

.justify {
    text-align: justify;
}

.overwrap {
    overflow-wrap: break-word;
}

/*------------------------------
    01. END GENERAL STYLE
------------------------------*/

/*------------------------------
    02. START PRELOADER STYLE
------------------------------*/
.preloader {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 9999;
}

.loader-wrapper {
    width: 70px;
    height: 35px;
    overflow: hidden;
    position: absolute;
    top: calc(50% - 17px);
    left: calc(50% - 35px);
}

.loader {
    width: 70px;
    height: 70px;
    border-style: solid;
    border-top-color: #FFF;
    border-right-color: #FFF;
    border-left-color: transparent;
    border-bottom-color: transparent;
    border-radius: 50%;
    box-sizing: border-box;
    animation: rotate 3s ease-in-out infinite;
    transform: rotate(-200deg)
}
/* ... */

